[package]
name = "slog-kickstarter"
version = "0.1.0"
authors = ["Elmar Athmer <elmar@athmer.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/elmarx/slog-kickstarter"
homepage = "https://github.com/elmarx/slog-kickstarter"
keywords = ["log", "logging", "structured", "json-logging", "setup"]
categories = ["development-tools::debugging"]
description = "builder to easily setup the slog logging ecosystem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.5.2"
slog-async = "2.5.0"
slog-envlogger = "2.2.0"
slog-term = "2.6.0"
slog-stdlog = "4.0.0"
slog-json = "2.3.0"
chrono = "0.4.13"

[dev-dependencies]
slog-scope = "4.3.0"
log = "0.4.8"
